--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "babel": "^6.23.0",
+    "date-fns": "^3.6.0",
     "jwt-decode": "^4.0.0",
     "navigate": "^0.3.6",
     "react": "^18.2.0",
